updated maven plugins and migrated tests to junit5