@@ -22,6 +22,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						@{argLine}
+						--add-opens fr.cril.rubens.arg/fr.cril.rubens.arg.checking=ALL-UNNAMED
+						--add-opens fr.cril.rubens.arg/fr.cril.rubens.arg.checking.checkers=ALL-UNNAMED
+						--add-opens fr.cril.rubens.arg/fr.cril.rubens.arg.checking.decoders=ALL-UNNAMED
+						--add-opens fr.cril.rubens.arg/fr.cril.rubens.arg.core=ALL-UNNAMED
+						--add-opens fr.cril.rubens.arg/fr.cril.rubens.arg.testgen=ALL-UNNAMED
+						--add-opens fr.cril.rubens.arg/fr.cril.rubens.arg.utils=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -82,11 +93,15 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>	
 	</dependencies>
 
 </project>
